@@ -1,6 +1,6 @@
 /* $Id$ */
 #include "rapi_internal.h"
-#include "rapi_api.h"
+#include "backend_ops_1.h"
 #include "rapi_buffer.h"
 #include "rapi_context.h"
 #include <string.h>
