@@ -1,7 +1,7 @@
 /* $Id$ */
 #undef __STRICT_ANSI__
 #define _GNU_SOURCE
-#include "rapi2/rapi2_api.h"
+#include "backend_ops_2/backend_ops_2.h"
 #include "rapi_indirection.h"
 #include <stdlib.h>
 #if HAVE_CONFIG_H
